--- a/weatherAPI/index.html
+++ b/weatherAPI/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="This is where your description goes">
 	<meta name="keywords" content="one, two, three">
 
-	<title>Title in the tab</title>
+	<title>Find the Weather</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,800;0,900;1,400&display=swap"
@@ -19,7 +19,7 @@
 
 <body>
 	<section class="introSection">
-		<h1>Find the weather</h1>
+		<h1>Find the Weather</h1>
 		<p>Enter a location (City & State --- Country) and get it's temperature!</p>
 	</section>
 	<section class="inputSection">
