--- a/weatherAPI/index.html
+++ b/weatherAPI/index.html
@@ -34,7 +34,7 @@
 		<h3 id="placetoPutTemp"></h3>
 	</section>
 
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="module" src="js/main.js"></script>
 </body>
 
 </html>
